[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rsa = "0.9"
